[gd_scene load_steps=20 format=3 uid="uid://bfv2hwblv6mub"]

[ext_resource type="Script" path="res://objects/enemy/small-hive/small_hive.gd" id="1_fj48p"]
[ext_resource type="Texture2D" uid="uid://cwd4vu22qx22q" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Small Hive/Small-Hive.png" id="2_mgjmm"]
[ext_resource type="Script" path="res://objects/enemy/FiniteStateMachine.gd" id="3_8vtx0"]
[ext_resource type="Script" path="res://Damageable.gd" id="3_f5j2p"]
[ext_resource type="Script" path="res://objects/enemy/small-hive/Hang.gd" id="4_518yy"]
[ext_resource type="Script" path="res://objects/enemy/small-hive/SpawnBee.gd" id="5_jgqdq"]
[ext_resource type="PackedScene" uid="uid://bqewe5n5volqr" path="res://objects/enemy/bee/bee.tscn" id="6_f1xn6"]
[ext_resource type="Script" path="res://objects/enemy/small-hive/Fall.gd" id="7_hbyrh"]
[ext_resource type="Script" path="res://objects/enemy/small-hive/Spawner.gd" id="8_itqnn"]
[ext_resource type="Script" path="res://objects/enemy/small-hive/Burst.gd" id="8_vfkld"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qw83y"]
radius = 7.0
height = 20.0

[sub_resource type="Animation" id="Animation_3isxr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bi27p"]
resource_name = "burst"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mgjmm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FiniteStateMachine/Burst")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_bee"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_1esfx"]
resource_name = "fall"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mgjmm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_4tda8"]
resource_name = "hang"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mgjmm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_wmcos"]
resource_name = "spawn"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mgjmm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FiniteStateMachine/Spawn")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_bee"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FiniteStateMachine/Spawn")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"toggle_can_transition"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xl8oo"]
_data = {
"RESET": SubResource("Animation_3isxr"),
"burst": SubResource("Animation_bi27p"),
"fall": SubResource("Animation_1esfx"),
"hang": SubResource("Animation_4tda8"),
"spawn": SubResource("Animation_wmcos")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njnpo"]
size = Vector2(308.063, 192.063)

[sub_resource type="CircleShape2D" id="CircleShape2D_wwae4"]
radius = 4.0

[node name="SmallHive" type="CharacterBody2D" node_paths=PackedStringArray("state_machine")]
collision_layer = 4
platform_on_leave = 2
script = ExtResource("1_fj48p")
state_machine = NodePath("FiniteStateMachine")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(16, 16)
texture = ExtResource("2_mgjmm")
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(8, 11)
shape = SubResource("CapsuleShape2D_qw83y")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("3_f5j2p")
health = 1.0

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("3_8vtx0")

[node name="Hang" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_518yy")

[node name="Timer" type="Timer" parent="FiniteStateMachine/Hang"]
wait_time = 7.0
one_shot = true

[node name="Spawn" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("spawner", "sprite")]
script = ExtResource("5_jgqdq")
bee_node = ExtResource("6_f1xn6")
spawner = NodePath("../../Spawner")
sprite = NodePath("../../Sprite2D")

[node name="Fall" type="Node" parent="FiniteStateMachine"]
script = ExtResource("7_hbyrh")

[node name="Burst" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("character", "sprite")]
script = ExtResource("8_vfkld")
bee_node = ExtResource("6_f1xn6")
character = NodePath("../..")
sprite = NodePath("../../Sprite2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xl8oo")
}

[node name="debug" type="Label" parent="."]
offset_left = -14.0
offset_top = -26.0
offset_right = 35.0
text = "debug"

[node name="Spawner" type="Node" parent="."]
script = ExtResource("8_itqnn")
spawn_limit = 1

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(11.9688, 64.9688)
shape = SubResource("RectangleShape2D_njnpo")

[node name="BurstDetection" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BurstDetection"]
position = Vector2(8, 19)
shape = SubResource("CircleShape2D_wwae4")

[connection signal="timeout" from="FiniteStateMachine/Hang/Timer" to="FiniteStateMachine/Hang" method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Hang" method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="FiniteStateMachine/Hang" method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="BurstDetection" to="FiniteStateMachine/Burst" method="_on_burst_detection_body_entered"]
